# xmlgen

./: .gitignore  ChangeLog  LICENSE  README  stack.yaml  xmlgen.cabal
doc/tutorial/: .hscolour  Makefile  tutorial.lhs
src/Text/XML/: Generator.hs  GeneratorBenchmarks.hs  GeneratorTest.hs
test/: 4.xml  5.xml  GeneratorBenchmarks.hs  GeneratorTest.hs  xhtml.xml
