Name:                xmlgen
Version:             0.1.0.0
Synopsis:            Fast XML generation library
License:             BSD3
License-file:        LICENSE
Author:              Stefan Schmidt, Stefan Wehr, Johannes Weiss
Maintainer:          wehr@factisresearch.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:   Text.XML.Generator
  Hs-Source-Dirs:    src
  Build-Depends:     blaze-builder >= 0.2 && < 0.3, base >= 4.2 && < 4.4,
                     bytestring >= 0.9 && < 0.10, containers >= 0.3 && < 0.5,
                     monads-tf >= 0.1 && < 0.2
