Name:                xmlgen
Version:             0.3.0.0
Synopsis:            Fast XML generation library
License:             BSD3
License-file:        LICENSE
Author:              Stefan Schmidt, Stefan Wehr, Johannes Weiss, David Leuschner
Maintainer:          wehr@factisresearch.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:   Text.XML.Generator
  Hs-Source-Dirs:    src
  Build-Depends:     blaze-builder >= 0.2 && < 0.3, base >= 4.2 && < 4.4,
                     bytestring >= 0.9 && < 0.10, containers >= 0.3 && < 0.5,
                     monads-tf >= 0.1 && < 0.2, text >= 0.10 && < 0.12
  Ghc-Prof-Options: -auto-all -caf-all

Flag tests
  description: Build test suite
  default:     False

Executable tests
  If flag(tests)
    Build-Depends: HTF == 0.6.*, MissingH == 1.1.*, hxt == 9.0.*,
                   filepath == 1.1.*, unix == 2.4.*, process == 1.0.*
  Else
    Buildable: False
  Hs-Source-Dirs: src
  Main-Is:        Text/XML/GeneratorTest.hs

Flag benchmarks
  description: Build benchmarks
  default:     False

Executable benchmarks
  If flag(benchmarks)
    Build-Depends: criterion == 0.5.*
  Else
    Buildable: False
  Hs-Source-Dirs: src
  Ghc-Options: -O2
  Ghc-Prof-Options: -auto-all -caf-all
  Main-Is:        Text/XML/GeneratorBenchmarks.hs
